<resources>
    <string name="app_name" translatable="false">Stock Hawk</string>
    <string name="action_settings" translatable="true">Settings</string>
    <string name="action_change_units" translatable="true">Change Units</string>
    <string name="symbol_search" translatable="true">Symbol Search</string>
    <string name="content_test" translatable="true">Search for a Stock Symbol</string>
    <string name="input_hint" translatable="true">FB</string>
    <string name="input_prefill" translatable="false"></string>
    <string name="network_toast">Uh-oh! This app requires an internet connection</string>

    <!-- strings for widget-->
    <string name="empty_data" translatable="true">No stocks available!</string>

    <!-- strings for graph-->
    <string name="graph_high" translatable="true">High</string>
    <string name="graph_low" translatable="true">Low</string>

    <!-- Strings for Toasts-->
    <string name="stock_already_saved" translatable="true">This stock is already saved!</string>
    <string name="stock_doesnt_exists" translatable="true">This stock doesn\'t exists!</string>
    <string name="under_dev" translatable="true">This section is under development!</string>

    <!-- description for the fab button-->
    <string name="fab_desc" translatable="true">Changing stock changes from percent value to dollar value</string>

    <!-- extra details strings-->

    <string name="stock_info" translatable="true">Stock Info</string>
    <string name="currency" translatable="true">Currency:</string>

    <string name="years_high_low" translatable="true">Years H/L:</string>
    <string name="days_high_low" translatable="true">Days H/L:</string>

    <string name="epse_label" translatable="true">EPSEstimate</string>
    <string name="epse_current_year" translatable="true">Current Year:</string>
    <string name="epse_current_year_price" translatable="true">Current Year Price:</string>
    <string name="epse_next_quarter" translatable="true">Next Quarter:</string>
    <string name="epse_next_year" translatable="true">Next Year:</string>
    <string name="epse_next_year_price" translatable="true">Next Year Price:</string>

    <string name="changes_label" translatable="true">Changes</string>
    <string name="change_from_year_high_low" translatable="true">From Year H/L:</string>
    <string name="percent_change_from_year_high_low" translatable="true">Percent H/L:</string>

    <string name="moving_avg" translatable="true">Moving Average</string>
    <string name="fifty_day_moving_avg" translatable="true">50 Days:</string>
    <string name="change_from_50_day_moving_avg" translatable="true">Change on 50 Days:</string>
    <string name="percent_change_from_50_day_moving_avg" translatable="true">Percent:</string>
    <string name="two_hundred_day_moving_avg" translatable="true">200 Days:</string>
    <string name="change_from_200_day_moving_avg" translatable="true">Change 200 Days:</string>
    <string name="percent_change_from_200_day_moving_avg" translatable="true">Percent:</string>

</resources>
