<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

    <android.support.v7.widget.GridLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/details_additional_pane"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/detail_accent_pane_background"
        android:paddingBottom="@dimen/abc_list_item_padding_horizontal_material"
        android:paddingEnd="32dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:paddingStart="32dp"
        android:paddingTop="@dimen/abc_list_item_padding_horizontal_material"
        app:columnCount="2">

        <TextView
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="center_horizontal"
            android:text="@string/stock_info"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/detail_accent_label"
            app:layout_columnSpan="2"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1"/>

        <TextView
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:text="@string/currency"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/detail_accent_label"
            app:layout_gravity="fill"
            app:layout_rowWeight="1"/>

        <TextView
            android:id="@+id/currency_textview"
            android:gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/white"
            tools:text="USD"
            app:layout_gravity="fill_vertical"/>

        <TextView
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:text="@string/years_high_low"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/detail_accent_label"
            app:layout_gravity="fill"
            app:layout_rowWeight="1"/>

        <TextView
            android:id="@+id/years_high_low_textview"
            android:gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/white"
            tools:text="788.023"
            app:layout_gravity="fill_vertical"/>

        <TextView
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:text="@string/days_high_low"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/detail_accent_label"
            app:layout_gravity="fill"
            app:layout_rowWeight="1"/>

        <TextView
            android:id="@+id/days_high_low_textview"
            android:gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/white"
            tools:text="788.023"
            app:layout_gravity="fill_vertical"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif"
            android:gravity="center_horizontal"
            android:text="@string/epse_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/detail_accent_label"
            app:layout_columnSpan="2"
            app:layout_gravity="fill"
            app:layout_rowWeight="1"/>

        <TextView
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:text="@string/epse_current_year"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/detail_accent_label"
            app:layout_gravity="fill"
            app:layout_rowWeight="1"/>

        <TextView
            android:id="@+id/epse_current_year_textview"
            android:gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/white"
            tools:text="122.0004"
            app:layout_gravity="fill_vertical"/>

        <TextView
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:text="@string/epse_current_year_price"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/detail_accent_label"
            app:layout_gravity="fill"
            app:layout_rowWeight="1"/>

        <TextView
            android:id="@+id/epse_current_year_price_textview"
            android:gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/white"
            tools:text="122.0004"
            app:layout_gravity="fill_vertical"/>

        <TextView
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:text="@string/epse_next_quarter"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/detail_accent_label"
            app:layout_gravity="fill"
            app:layout_rowWeight="1"/>

        <TextView
            android:id="@+id/epse_next_quarter_textview"
            android:gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/white"
            tools:text="122.0004"
            app:layout_gravity="fill_vertical"/>

        <TextView
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:text="@string/epse_next_year"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/detail_accent_label"
            app:layout_gravity="fill"
            app:layout_rowWeight="1"/>

        <TextView
            android:id="@+id/epse_next_year_textview"
            android:gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/white"
            tools:text="122.0004"
            app:layout_gravity="fill_vertical"/>

        <TextView
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:text="@string/epse_next_year_price"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/detail_accent_label"
            app:layout_gravity="fill"
            app:layout_rowWeight="1"/>

        <TextView
            android:id="@+id/epse_next_year_price_textview"
            android:gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/white"
            tools:text="122.0004"
            app:layout_gravity="fill_vertical"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif"
            android:gravity="center_horizontal"
            android:text="@string/changes_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/detail_accent_label"
            app:layout_columnSpan="2"
            app:layout_gravity="fill"
            app:layout_rowWeight="1"/>

        <TextView
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:text="@string/change_from_year_high_low"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/detail_accent_label"
            app:layout_gravity="fill"
            app:layout_rowWeight="1"/>

        <TextView
            android:id="@+id/change_from_year_high_low_textview"
            android:gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/white"
            tools:text="122.0004"
            app:layout_gravity="fill_vertical"/>

        <TextView
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:text="@string/percent_change_from_year_high_low"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/detail_accent_label"
            app:layout_gravity="fill"
            app:layout_rowWeight="1"/>

        <TextView
            android:id="@+id/percent_change_from_year_high_low_textview"
            android:gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/white"
            tools:text="122.0004"
            app:layout_gravity="fill_vertical"/>


        <TextView
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif"
            android:gravity="center_horizontal"
            android:text="@string/moving_avg"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/detail_accent_label"
            app:layout_columnSpan="2"
            app:layout_gravity="fill"
            app:layout_rowWeight="1"/>

        <TextView
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:text="@string/fifty_day_moving_avg"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/detail_accent_label"
            app:layout_gravity="fill"
            app:layout_rowWeight="1"/>

        <TextView
            android:id="@+id/fifty_day_moving_avg_textview"
            android:gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/white"
            tools:text="122.0004"
            app:layout_gravity="fill_vertical"/>

        <TextView
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:text="@string/change_from_50_day_moving_avg"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/detail_accent_label"
            app:layout_gravity="fill"
            app:layout_rowWeight="1"/>

        <TextView
            android:id="@+id/change_from_50_day_moving_avg_textview"
            android:gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/white"
            tools:text="122.0004"
            app:layout_gravity="fill_vertical"/>

        <TextView
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:text="@string/percent_change_from_50_day_moving_avg"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/detail_accent_label"
            app:layout_gravity="fill"
            app:layout_rowWeight="1"/>

        <TextView
            android:id="@+id/percent_change_from_50_day_moving_avg_textview"
            android:gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/white"
            tools:text="122.0004"
            app:layout_gravity="fill_vertical"/>

        <TextView
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:text="@string/two_hundred_day_moving_avg"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/detail_accent_label"
            app:layout_gravity="fill"
            app:layout_rowWeight="1"/>

        <TextView
            android:id="@+id/two_hundred_day_moving_avg_textview"
            android:gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/white"
            tools:text="122.0004"
            app:layout_gravity="fill_vertical"/>

        <TextView
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:text="@string/change_from_200_day_moving_avg"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/detail_accent_label"
            app:layout_gravity="fill"
            app:layout_rowWeight="1"/>

        <TextView
            android:id="@+id/change_from_200_day_moving_avg_textview"
            android:gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/white"
            tools:text="122.0004"
            app:layout_gravity="fill_vertical"/>

        <TextView
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:text="@string/percent_change_from_200_day_moving_avg"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/detail_accent_label"
            app:layout_gravity="fill"
            app:layout_rowWeight="1"/>

        <TextView
            android:id="@+id/percent_change_from_200_day_moving_avg_textview"
            android:gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/white"
            tools:text="122.0004"
            app:layout_gravity="fill_vertical"/>

    </android.support.v7.widget.GridLayout>

</ScrollView>